# DesktopScreen

./: CMakeLists.txt  Kconfig.projbuild  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.old
font/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  component.mk  hello_world_main.c  sdkconfig.defaults  setting.html
main/html/: setting.html
main/https_pem/: server_root_cert.pem
main/include/: ds_font.h  ds_system_data.h  ds_test.h
main/include/data/: ds_data_icon.h  ds_data_image.h  ds_data_num.h  ds_data_page.h  ds_data_weather.h
main/include/draw/: ds_font.h  ds_paint.h
main/include/driver/: ds_ft6336.h  ds_screen.h
main/include/fs/: ds_spiffs.h
main/include/hal/: ds_gpio.h  ds_i2c.h  ds_nvs.h  ds_pwm.h  ds_spi.h  ds_timer.h
main/include/net/: ds_dns_server.h  ds_http_request.h  ds_http_server.h  ds_https_request.h  ds_wifi_ap.h  ds_wifi_ap_sta.h  ds_wifi_scan.h  ds_wifi_sta.h
main/include/ui/: ds_ui_fans.h  ds_ui_mainpage.h  ds_ui_page_manage.h  ds_ui_timepage.h  ds_ui_tomatopage.h  ds_ui_weatherpage.h  ds_ui_wordpage.h
main/src/: ds_system_data.c  ds_test.c
main/src/data/: ds_data_icon.c  ds_data_num.c  ds_data_page.c  ds_data_weather.c
main/src/draw/: ds_font.c  ds_paint.c
main/src/driver/: ds_ft6336.c  ds_screen.c
main/src/fs/: ds_spiffs.c
main/src/hal/: ds_gpio.c  ds_i2c.c  ds_nvs.c  ds_pwm.c  ds_spi.c  ds_timer.c
main/src/net/: ds_dns_server.c  ds_http_request.c  ds_http_server.c  ds_https_request.c  ds_wifi_ap.c  ds_wifi_ap_sta.c  ds_wifi_scan.c  ds_wifi_sta.c
main/src/ui/: ds_ui_fans.c  ds_ui_mainpage.c  ds_ui_num_display.c  ds_ui_page_manage.c  ds_ui_timepage.c  ds_ui_tomatopage.c  ds_ui_weatherpage.c  ds_ui_wordpage.c
